Html file frissítése

--- a/Weboldal/index.html
+++ b/Weboldal/index.html
@@ -46,24 +46,55 @@
         <div class="main__container">
             <h1 class="main__heading">BLINK NEWS</h1>
             <p class="main__description">Hiteles hírek első kézből</p>
-            <button class="main__btn"><a href="#">Explore</a></button>
+            <button class="main__btn"><a href="#fresh_news">Hírek</a></button>
         </div>
     </div>
 
     <!-- Friss hírek szekció -->
+<!-- 
     <div class="fresh" id="fresh_news">
         <div class="fresh__container">
             <div class="fresh__img--container">
-                <div class="fresh__img--card">ICON</div>
-            </div>
-            <div class="fresh__content">
-                <h1>Valami fejléc</h1>
-                <h2>Valami nagyon hosszú szöveg ide</h2>
-                <p>Ide kell egy nagyon hosszú szöveg, majd később berakjuk.</p>
-                <button class="main__btn"><a href="#">Másik gomb</a></button>
+                <div class="fresh__img--card"><img src="images/hir1.png">
+                    <h1>Valami tojás</h1>
+                    <h2>Valami nagyon hosszú szöveg ide</h2>
+                    <p>Ide kell egy nagyon hosszú szöveg, majd később berakjuk.</p>
+                </div> 
             </div>
         </div>
     </div>
+    <div class="fresh" id="fresh_news">
+      <div class="fresh__container">
+          <div class="fresh__img--container">
+              <div class="fresh__img--card"><img src="images/hir1.png">
+                  <h1>Valami tojás</h1>
+                  <h2>Valami nagyon hosszú szöveg ide</h2>
+                  <p>Ide kell egy nagyon hosszú szöveg, majd később berakjuk.</p>
+              </div> 
+          </div>
+      </div>
+  </div>
+  <div class="fresh" id="fresh_news">
+    <div class="fresh__container">
+        <div class="fresh__img--container">
+            <div class="fresh__img--card"><img src="images/hir1.png">
+                <h1>Valami tojás</h1>
+                <h2>Valami nagyon hosszú szöveg ide</h2>
+                <p>Ide kell egy nagyon hosszú szöveg, majd később berakjuk.</p>
+            </div> 
+        </div>
+    </div>
+</div> 
+-->
+
+<div class="container">
+<img src="images/hir1.png"> 
+<img src="images/hir1.png"> 
+<img src="images/hir1.png"> 
+<img src="images/hir1.png">
+</div>
+
+
 
     <!-- Kategóriák szekció -->
     <div class="categs" id="categories">
