--- a/Weboldal/index.html
+++ b/Weboldal/index.html
@@ -14,6 +14,7 @@
   />
 </head>
 <body>
+  <button onclick="topFunction()" id="myBtntop" title="Go to top">&#8593;</button>
     <!-- Navigációs rész -->
     <nav class="navbar">
         <div class="navbar__container">
@@ -51,55 +52,65 @@
     </div>
 
     <!-- Friss hírek szekció -->
-<!-- 
-    <div class="fresh" id="fresh_news">
-        <div class="fresh__container">
-            <div class="fresh__img--container">
-                <div class="fresh__img--card"><img src="images/hir1.png">
-                    <h1>Valami tojás</h1>
-                    <h2>Valami nagyon hosszú szöveg ide</h2>
-                    <p>Ide kell egy nagyon hosszú szöveg, majd később berakjuk.</p>
-                </div> 
-            </div>
-        </div>
-    </div>
-    <div class="fresh" id="fresh_news">
-      <div class="fresh__container">
-          <div class="fresh__img--container">
-              <div class="fresh__img--card"><img src="images/hir1.png">
-                  <h1>Valami tojás</h1>
-                  <h2>Valami nagyon hosszú szöveg ide</h2>
-                  <p>Ide kell egy nagyon hosszú szöveg, majd később berakjuk.</p>
-              </div> 
-          </div>
-      </div>
-  </div>
-  <div class="fresh" id="fresh_news">
-    <div class="fresh__container">
-        <div class="fresh__img--container">
-            <div class="fresh__img--card"><img src="images/hir1.png">
-                <h1>Valami tojás</h1>
-                <h2>Valami nagyon hosszú szöveg ide</h2>
-                <p>Ide kell egy nagyon hosszú szöveg, majd később berakjuk.</p>
-            </div> 
-        </div>
-    </div>
-</div> 
--->
 
-<div class="container">
-<img src="images/hir1.png"> 
-<img src="images/hir1.png"> 
-<img src="images/hir1.png"> 
-<img src="images/hir1.png">
+<div class="container" id="fresh_news">
+  <a href="firstnews.html">
+  <div class="images">
+    <img src="images/hir1.png">
+    <div>
+      <h2>Arcok a tojáson? Misztikus történések</h2>
+      <p>Lórum ipse ezés mindig kárkódik valamilyen tüdött stalkost: tultást, ragyorfát, anyozást, akármit. Poznak a sajtalomok, van ennek jó és nékos ronálája is.
+        Jó, mert rengő és rengő omlásokat zsúfolhat a virány, hegője van mind hatajlan terterére a zetettel. Van azonban södés is: a sajtalomok őrzésével könnyen ványkodhatik a virány talása és csirize.
+        Könnyen mezésbe, könyverdi hortba barolódzja a virányot a szekta. Külező a virány követet roszladnia abban, hogy faságon kívül kodja, mint kedik szemés. Van omlás, amit szívesen zsúfol a virány, de van omlás, ami zató és csepremes.
+        De a lizetésnek hődnie a tenődésben éppen olyan igatos mint a szelő, hődnie az énnek éppen olyan tanós, mint a fanyó szökéj.</p>
+    </div>
+  </div>
+  </a>
+  <a href="secondnews.html">
+  <div class="images">
+    <img src="images//kidwithgun.jpg">
+    <div>
+      <h2>Fegyvertartás tinikorban</h2>
+      <p>Lórum ipse ezés mindig kárkódik valamilyen tüdött stalkost: tultást, ragyorfát, anyozást, akármit. Poznak a sajtalomok, van ennek jó és nékos ronálája is.
+        Jó, mert rengő és rengő omlásokat zsúfolhat a virány, hegője van mind hatajlan terterére a zetettel. Van azonban södés is: a sajtalomok őrzésével könnyen ványkodhatik a virány talása és csirize.
+        Könnyen mezésbe, könyverdi hortba barolódzja a virányot a szekta. Külező a virány követet roszladnia abban, hogy faságon kívül kodja, mint kedik szemés. Van omlás, amit szívesen zsúfol a virány, de van omlás, ami zató és csepremes.
+        De a lizetésnek hődnie a tenődésben éppen olyan igatos mint a szelő, hődnie az énnek éppen olyan tanós, mint a fanyó szökéj.</p>
+    </div>
+  </div>
+</a>
+<a href="thirdnews.html">
+  <div class="images">
+    <img src="images/stock.jpg">
+    <div>
+      <h2>Hogyan találj fiatalon munkát? Segítség: Sehogy</h2>
+      <p>Lórum ipse ezés mindig kárkódik valamilyen tüdött stalkost: tultást, ragyorfát, anyozást, akármit. Poznak a sajtalomok, van ennek jó és nékos ronálája is.
+        Jó, mert rengő és rengő omlásokat zsúfolhat a virány, hegője van mind hatajlan terterére a zetettel. Van azonban södés is: a sajtalomok őrzésével könnyen ványkodhatik a virány talása és csirize.
+        Könnyen mezésbe, könyverdi hortba barolódzja a virányot a szekta. Külező a virány követet roszladnia abban, hogy faságon kívül kodja, mint kedik szemés. Van omlás, amit szívesen zsúfol a virány, de van omlás, ami zató és csepremes.
+        De a lizetésnek hődnie a tenődésben éppen olyan igatos mint a szelő, hődnie az énnek éppen olyan tanós, mint a fanyó szökéj.</p>
+    </div>
+  </div>
+</a>
+<a href="fourthnews.html">
+<div class="images">
+  <img src="images/stock2.jpg">
+  <div>
+    <h2>Hogyan ne csináljunk magunkról szelfit</h2>
+    <p>Lórum ipse ezés mindig kárkódik valamilyen tüdött stalkost: tultást, ragyorfát, anyozást, akármit. Poznak a sajtalomok, van ennek jó és nékos ronálája is.
+      Jó, mert rengő és rengő omlásokat zsúfolhat a virány, hegője van mind hatajlan terterére a zetettel. Van azonban södés is: a sajtalomok őrzésével könnyen ványkodhatik a virány talása és csirize.
+      Könnyen mezésbe, könyverdi hortba barolódzja a virányot a szekta. Külező a virány követet roszladnia abban, hogy faságon kívül kodja, mint kedik szemés. Van omlás, amit szívesen zsúfol a virány, de van omlás, ami zató és csepremes.
+      De a lizetésnek hődnie a tenődésben éppen olyan igatos mint a szelő, hődnie az énnek éppen olyan tanós, mint a fanyó szökéj.</p>
+  </div>
+</div>
+</a>
 </div>
 
 
 
     <!-- Kategóriák szekció -->
     <div class="categs" id="categories">
-        <h1>BLINK TÉMÁK</h1>
+        <h1>BLINK KATEGÓRIÁK</h1>
         <div class="categ__card">
+            <p>Friss</p>
             <p>Belföld</p>
             <p>Nagyvilág</p>
             <p>Gazdaság</p>
@@ -110,6 +121,7 @@
             <p>Podcast</p>
             <p>Közélet</p>
             <p>Sport</p>
+            <p>Bulvár</p>
         </div>
     </div>
 
@@ -123,7 +135,7 @@
                 <button class="main__btn"><a href="#">Feliratkozás</a></button>
             </div>
             <div class="fresh__img--container">
-                <div class="fresh__img--card">ICON</div>
+                <div class="fresh__img--card"><img src="images/subscribe.jpg"></div>
             </div>
         </div>
     </div>
@@ -134,48 +146,48 @@
           <div class="footer__link--wrapper">
             <div class="footer__link--items">
               <h2>Rólunk</h2>
-              <a href="/sign__up">Működésünk</a> <a href="/">Vélemények</a>
-              <a href="/">Karrier</a> <a href="/">Szolgáltatási feltételek</a>
+              <a href="#">Működésünk</a> <a href="#">Vélemények</a>
+              <a href="#">Karrier</a> <a href="#">Szolgáltatási feltételek</a>
             </div>
             <div class="footer__link--items">
               <h2>Írjon nekünk</h2>
-              <a href="/">Elérhetőségek</a> <a href="/">Ügyfélszolgálat</a>
-              <a href="/">Célok</a>
+              <a href="#">Elérhetőségek</a> <a href="#">Ügyfélszolgálat</a>
+              <a href="#">Célok</a>
             </div>
           </div>
           <div class="footer__link--wrapper">
             <div class="footer__link--items">
               <h2>Videók</h2>
-              <a href="/">Beküldött anyagok</a> <a href="/">Hírügynőkség</a>
-              <a href="/">Iroda</a>
+              <a href="#">Beküldött anyagok</a> <a href="#">Hírügynőkség</a>
+              <a href="#">Iroda</a>
             </div>
             <div class="footer__link--items">
               <h2>Közösségi Média</h2>
-              <a href="/">Instagram</a> <a href="/">Facebook</a>
-              <a href="/">Youtube</a> <a href="/">Twitter</a>
+              <a href="#">Instagram</a> <a href="#">Facebook</a>
+              <a href="#">Youtube</a> <a href="#">Twitter</a>
             </div>
           </div>
         </div>
         <section class="social__media">
           <div class="social__media--wrap">
             <div class="footer__logo">
-              <a href="/" id="footer__logo">BLINK NEWS</a>
+              <a href="#" id="footer__logo">BLINK NEWS</a>
             </div>
             <p class="website__rights">© Blink News 2022. Minden jog fenntartva</p>
             <div class="social__icons">
-              <a href="/" class="social__icon--link" target="_blank"
+              <a href="#" class="social__icon--link" target="_blank"
                 ><i class="fab fa-facebook"></i
               ></a>
-              <a href="/" class="social__icon--link"
+              <a href="#" class="social__icon--link"
                 ><i class="fab fa-instagram"></i
               ></a>
-              <a href="/" class="social__icon--link"
+              <a href="#" class="social__icon--link"
                 ><i class="fab fa-youtube"></i
               ></a>
-              <a href="/" class="social__icon--link"
+              <a href="#" class="social__icon--link"
                 ><i class="fab fa-linkedin"></i
               ></a>
-              <a href="/" class="social__icon--link"
+              <a href="#" class="social__icon--link"
                 ><i class="fab fa-twitter"></i
               ></a>
             </div>
