--- a/Weboldal/thirdnews.html
+++ b/Weboldal/thirdnews.html
@@ -14,6 +14,7 @@
   />
 </head>
 <body>
+  <button onclick="topFunction()" id="myBtntop" title="Go to top">&#8593;</button>
     <!-- Navigációs rész -->
     <nav class="navbar">
         <div class="navbar__container">
@@ -75,18 +76,18 @@
     <div class="categs" id="categories">
         <h1>BLINK KATEGÓRIÁK</h1>
         <div class="categ__card">
-            <p>Friss</p>
-            <p>Belföld</p>
-            <p>Nagyvilág</p>
-            <p>Gazdaság</p>
-            <p>Kultúra</p>
-            <p>Tech</p>
-            <p>Élet-Stílus</p>
-            <p>Szórakozás</p>
-            <p>Podcast</p>
-            <p>Közélet</p>
-            <p>Sport</p>
-            <p>Bulvár</p>
+          <a  href="https://www.blikk.hu/legfrissebb"><p>Friss</p></a>
+          <a  href="https://www.blikk.hu/aktualis/belfold"><p>Belföld</p></a>
+          <a  href="https://www.blikk.hu/aktualis/kulfold"><p>Nagyvilág</p></a>
+          <a  href="https://www.blikk.hu/aktualis/kulfold"><p>Gazdaság</p></a>
+          <a  href="https://www.blikk.hu/sztarvilag/kultura"><p>Kultúra</p></a>
+          <a  href="https://www.blikk.hu/ferfiaknak/tech"><p>Tech</p></a>
+          <a  href="https://www.blikk.hu/eletmod"><p>Élet-Stílus</p></a>
+          <a  href="https://www.blikk.hu/szorakozas"><p>Szórakozás</p></a>
+          <a  href="https://www.blikk.hu/podcast"><p>Podcast</p></a>
+          <a  href="https://www.blikk.hu/pozitiv-hirek"><p>Közélet</p></a>
+          <a  href="https://www.blikk.hu/sport"><p>Sport</p></a>
+          <a  href="https://www.blikk.hu/sztarvilag"><p>Bulvár</p></a>
         </div>
     </div>
 
